AcoMerge/src/ezspark.h

typedef struct aco_fcl{
    int input_size, output_size, identifier;
    float k_percentage;
    float* weights;
    float* biases;
    float* all_weights;
    float* all_biases;
    float* scores;
    float* d_weights;
    float* d_biases;
    float* pheromone_weights;
    float* pheromone_biases;
    float* output;
    float* input;
    float* output_error;
    float* input_error;
    int* indices;
    int* output_used;
    uint64_t weights_array_offset, biases_array_offset, pheromone_weights_array_offset, pheromone_biases_array_offset, output_array_offset, input_array_offset;
}aco_fcl;
typedef struct aco_fcl_kolmogorov_arnold{
    int input_size, output_size,maximum_degree, n_functions, identifier;
    float* weights;
    float* ts;
    float* pheromone_weights;
    float* pheromone_ts;
    float* output;
    float* input;
    float* output_error;
    float* input_error;
    uint64_t weights_array_offset, ts_array_offset, pheromone_weights_array_offset, pheromone_ts_array_offset, output_array_offset, input_array_offset;
}aco_fcl_kolmogorov_arnold;
typedef struct aco_cl{
    int channels, kernel_rows, kernel_cols, n_kernels, stride_rows, stride_cols, input_rows, input_cols, identifier, padding_rows, padding_cols;
    float k_percentage;
    float* weights;
    float* biases;
    float* all_weights;
    float* all_biases;
    float* scores;
    float* d_weights;
    float* d_biases;
    float* pheromone_weights;
    float* pheromone_biases;
    float* output;
    float* input;
    float* output_error;
    float* input_error;
    int* indices;
    int* output_used;
    uint64_t weights_array_offset, biases_array_offset, pheromone_weights_array_offset, pheromone_biases_array_offset, output_array_offset, input_array_offset;
}aco_cl;
typedef struct aco_pooling{
    int input_rows, input_cols, channels, pooling_rows, pooling_cols, stride_rows, stride_cols, pooling_type, identifier, padding_rows, padding_cols;
    float* output;
    float* input;
    float* output_error;
    float* input_error;
    uint64_t input_array_offset, output_array_offset;
    int* output_used;
}aco_pooling;
typedef struct aco_lstm{
    int input_size, output_size, window, timestamp, identifier;
    float k_percentage;
    float* weights;
    float* biases;
    float* all_weights;
    float* all_biases;
    float* d_weights;
    float* d_biases;
    float* pheromone_weights;
    float* pheromone_biases;
    float* output;
    float* output_h;
    float* output_k;
    float* output_c;
    float* input;
    float* input_h;
    float* input_k;
    float* input_c;
    float* scores;
    float* output_error;
    float* output_h_error;
    float* output_k_error;
    float* output_c_error;
    float* input_error;
    float* input_h_error;
    float* input_k_error;
    float* input_c_error;
    int* indices;
    int* output_used;
    int* output_h_used;
    uint64_t weights_array_offset, biases_array_offset, pheromone_weights_array_offset, pheromone_biases_array_offset, output_array_offset, input_array_offset, output_h_array_offset,output_k_array_offset, input_h_array_offset,input_k_array_offset, output_c_array_offset, input_c_array_offset;
}aco_lstm;
typedef struct aco_sum{
    int input_size, input2_size, output_size, identifier, flag;
    float* output;
    float* input;
    float* input2;
    float* output_error;
    float* input_error;
    float* input2_error;
    int* output_used;
    uint64_t input_array_offset,input2_array_offset, output_array_offset;
}aco_sum;
typedef struct aco_splitter{
    int input_size, output_size, identifier;
    float* output;
    float* input;
    float* output_error;
    float* input_error;
    int* output_used;
    uint64_t input_array_offset, output_array_offset, index_offset;
}aco_splitter;
typedef struct aco_concatenation{
    int input_size,input2_size, output_size, identifier;
    float value;
    float* output;
    float* input;
    float* input2;
    float* output_error;
    float* input_error;
    float* input2_error;
    int* output_used;
    uint64_t input_array_offset,input2_array_offset, output_array_offset;
}aco_concatenation;
typedef struct aco_activation{
    int activations_size,input_size, output_size,activation_flag,identifier;
    int* activations;
    float* pheromone_activations;
    float* input;
    float* output;
    float* input_error;
    float* output_error;
    int* output_used;
    uint64_t input_array_offset, output_array_offset,pheromone_activations_offset;
}aco_activation;
typedef struct aco_node aco_node;
struct aco_node{
    int ff_flag, identifier, n_input, n_output;
    aco_fcl* fcl;
    aco_fcl_kolmogorov_arnold* fcl_ka;
    aco_cl* cl;
    aco_lstm* lstm;
    aco_sum* sum;
    aco_pooling* pooling;
    aco_concatenation* concatenation;
    aco_activation* activation;
    aco_splitter* splitter;
    aco_node** input;
    aco_node** output;
};
typedef struct BitArray{
    uint8_t* data;
    uint64_t size; 
    uint64_t currentBit; 
    double pheromone;
} BitArray;
typedef struct aco_superstruct{
    int n_roots, n_nodes, n_arrays,n_int_arrays, n_leaves, n_activation_functions, n_bit_arrays, scores_partial_derivative_index;
    aco_node** roots;
    aco_node** aco_nodes;
    aco_node** leaves;
    BitArray** bayesan_bit_arrays;
    uint64_t* array_sizes;
    uint64_t* int_array_sizes;
    float** arrays;
    int* int_arrays;
    int** adjacency_matrix;
    int** same_params;
    BitArray** bit_arrays;
    int number_of_iterations, max_iterations, n_ants, iteration_index, time_to_update_with_global_best,number_iterations_for_single_aco_iteration, use_heurisitc, free_all_params;
    float tau_min, tau_max, init_tau, p_dec, p, pheromone_best_trail, average, rho, k_zero, current_p;
    double alpha_aco, beta_aco, v_min, v_max, softmax_temperature, max_alpha_aco, max_beta_aco,min_alpha_aco, min_beta_aco, exponential_alpha_decay, exponential_beta_decay;
    double dt,m,gamma,lambda1,lambda2,sigma1,sigma2,alpha;
    double* losses;
    float alpha_eiwoa, beta_eiwoa, weight_eiwoa, percentage_of_elements;
    float levy_threshold,altering_ratio;
    int only_for_inference;
}aco_superstruct;
typedef struct edge_popup_trainer{
    int batch_size, optimizer_flag, mini_batch_size;
    int* error_flags;
    float lr, epsilon, m0, n0, mt, nt; 
    aco_superstruct** s;
    int* n_arrays; 
    int* int_n_arrays; 
    uint64_t** array_sizes;
    uint64_t** int_array_sizes;
    float*** arrays; 
    int*** int_arrays; 
}edge_popup_trainer;
typedef struct multithread_aco_superstruct{
    uint64_t input_offset, output_offset, n_inputs_outputs, index, input_size, output_size;
    float* input, *output, *real_output;
    int* indices;
    double ret_err;
    int n_node_identifiers, n_parameters;
    aco_superstruct* s;
    int* node_identifiers;
    edge_popup_trainer* e;
}multithread_aco_superstruct;